openshift.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: fire-bolt
  namespace: chanu
spec:
  selector:
    app: chanu
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: Rolling
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: chanu
    spec:
      containers:
        - name: httpd
          image: >-
            image-registry.openshift-image-registry.svc:5000/chanu/mywebsite1:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chanu
  namespace: chanu
spec:
  selector:
    app: chanu
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: chanu
  namespace: chanu
spec:
  host: chanu-chanu.apps.ocp4.imss.com
  to:
    kind: Service
    name: chanu
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
